manifest/supermario-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: supermario-deployment
  namespace: games
  labels:
    app: supermario-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: supermario-deployment
  template:
    metadata:
      labels:
        app: supermario-deployment
    spec:
      containers:
      - name: supermario
        image: pengbai/docker-supermario
        ports:
        - containerPort: 8080
