manifest/supermario-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: supermario-svc
spec:
  selector:
    app: supermario-mario
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8600
